templates/RBAC/roleManager-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRoleAuth
metadata:
  name: block-latest-tag
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["*"]
  parameters:
          users:
                  - "sid"
